--- a/practice-for-week-07-css-flex-box/main.css
+++ b/practice-for-week-07-css-flex-box/main.css
@@ -8,6 +8,9 @@
     /* Phase 1 */
 
     /* Your code here */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .example2 {
@@ -18,6 +21,10 @@
     /* Phase 2 */
 
     /* Your code here */
+    display: inline-flex;
+    justify-content: space-around;
+    align-items: center; 
+    gap: 8px;
 }
 
 .example2 > button {
